# off-line-Image-gen-mac

./: .gitignore  .mcp-plug-profile  CLAUDE.md  Launch-Debug.command  Launch.command  README.md  app.py  app_settings.json  generate.py  pipeline.py  pyproject.toml  requirements.txt  server.py  workflow_utils.py
.superpowers/brainstorm/17971-1773497021/: .server-stopped  ipa-mask-approach.html
core/: depth_map.py  erase.py  ip_adapter_flux.py  lora_flux2.py  workflow_utils.py
docs/plans/: 2026-03-14-ref-size-button-mask-warning.md
docs/superpowers/plans/: 2026-03-14-gallery-drag-ui-help.md  2026-03-14-ip-adapter-flux-lora.md  2026-03-14-ip-adapter-lora-flux-ui-design.md  2026-03-14-remove-ip-adapter.md  2026-03-15-workflow-ref-images.md  2026-03-16-lora-compat-cuda-removal-model-sources.md  2026-04-01-depth-map.md  2026-04-09-watermark-remover.md
docs/superpowers/specs/: 2026-03-14-remove-ip-adapter.md  2026-04-01-depth-map-design.md  (+4 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  store.ts  types.ts
logs/: server_log_20260316_121433.txt  server_log_20260317_091120.txt
tests/: test_downloads.py  test_erase.py  test_ltx.py  test_model_sources.py
workflows/20260301_133342_Test_Flux2_4sdnq_74s/: workflow.json
workflows/20260301_135343_Test_Flux2_9sdnq_157s/: workflow.json
workflows/20260301_135801_Test_Flux2_94B_73s/: workflow.json
workflows/20260301_140154_Test_Z-Image_Turbo_Q_36s/: workflow.json
workflows/20260301_142246_Test_Z-Image_Turbo_full_24s/: workflow.json
(+9 files in other folders)
